@@ -54,7 +54,7 @@
 
 		if ( isEditMode ) {
 			carouselWrap.resize( function() {
-				mySwiper.update();
+				//mySwiper.update();
 			});
 		}
 
