@@ -5,7 +5,6 @@
     }
 }
 .pp-info-box {
-    overflow: hidden;
     .pp-info-box-icon {
         display: inline-block;
         line-height: 1;
@@ -25,6 +24,9 @@
     }
     &-divider {
         display: inline-block;
+    }
+    .pp-info-box-equal-height & {
+        height: 100%;
     }
 }
 .pp-info-box-left {
